crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__compound_assign_through_ptr_deref_on_struct_field.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 478
    signature_index: 1
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Pointer:
                memory: 476
                kind: Memory32
            mutability: Immutable
          - ty:
              Pointer:
                memory: 476
                kind: Memory32
            mutability: Immutable
          - ty: U32
            mutability: Immutable
          - ty: U32
            mutability: Immutable
        result: Unit
      - kind: Block
        parent: 0
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 1
                  value:
                    kind:
                      LocalGet:
                        scope_index: 0
                        local_index: 0
                    ty:
                      Pointer:
                        memory: 476
                        kind: Memory32
              ty: Unit
            - kind:
                PointerStore:
                  pointer:
                    kind:
                      LocalGet:
                        scope_index: 0
                        local_index: 1
                    ty:
                      Pointer:
                        memory: 476
                        kind: Memory32
                  value:
                    kind:
                      Block:
                        scope_index: 1
                        expressions:
                          - kind:
                              LocalSet:
                                scope_index: 0
                                local_index: 2
                                value:
                                  kind:
                                    PointerLoad:
                                      pointer:
                                        kind:
                                          LocalGet:
                                            scope_index: 0
                                            local_index: 1
                                        ty:
                                          Pointer:
                                            memory: 476
                                            kind: Memory32
                                      offset: 4
                                      memory: 476
                                  ty: U32
                            ty: Unit
                          - kind:
                              LocalSet:
                                scope_index: 0
                                local_index: 3
                                value:
                                  kind:
                                    Int:
                                      value: 1
                                  ty: U32
                            ty: Unit
                          - kind:
                              Block:
                                scope_index: 0
                                expressions:
                                  - kind:
                                      Add:
                                        left:
                                          kind:
                                            LocalGet:
                                              scope_index: 0
                                              local_index: 2
                                          ty: I32
                                        right:
                                          kind:
                                            LocalGet:
                                              scope_index: 0
                                              local_index: 3
                                          ty: I32
                                    ty: U32
                            ty: U32
                    ty: U32
                  offset: 4
                  memory: 476
              ty: Unit
      ty: Unit
    static_data: []
signatures:
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - Pointer:
          memory: 476
          kind: Memory32
      - Unit
    params_count: 1
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 478
      name: 249
imports: []
memories:
  - id: 476
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates:
  - fields:
      - ty: U32
        offset: 0
      - ty: U32
        offset: 4
      - ty: U32
        offset: 8
    layout:
      size: 12
      align: 4
    scalars:
      entries:
        - ty: U32
          offset: 0
        - ty: U32
          offset: 4
        - ty: U32
          offset: 8
      field_starts:
        - 0
        - 1
        - 2
        - 3
    decl_to_phys:
      - 0
      - 1
      - 2
static_entries: []
start_function: ~
