crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__generic_bitand_bound_resolves_to_primitive_impl.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 477
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: I32
            mutability: Immutable
          - ty: I32
            mutability: Immutable
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 491
                    ty:
                      Function:
                        signature_index: 0
                  arguments:
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 0
                      ty: I32
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 1
                      ty: I32
              ty: I32
      ty: I32
    static_data: []
  - id: 491
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: I32
            mutability: Immutable
          - ty: I32
            mutability: Immutable
          - ty: I32
            mutability: Immutable
          - ty: I32
            mutability: Immutable
        result: I32
      - kind: Block
        parent: 0
        locals: []
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Block:
                  scope_index: 1
                  expressions:
                    - kind:
                        LocalSet:
                          scope_index: 0
                          local_index: 2
                          value:
                            kind:
                              LocalGet:
                                scope_index: 0
                                local_index: 0
                            ty: I32
                      ty: Unit
                    - kind:
                        LocalSet:
                          scope_index: 0
                          local_index: 3
                          value:
                            kind:
                              LocalGet:
                                scope_index: 0
                                local_index: 1
                            ty: I32
                      ty: Unit
                    - kind:
                        Block:
                          scope_index: 0
                          expressions:
                            - kind:
                                BitAnd:
                                  left:
                                    kind:
                                      LocalGet:
                                        scope_index: 0
                                        local_index: 2
                                    ty: I32
                                  right:
                                    kind:
                                      LocalGet:
                                        scope_index: 0
                                        local_index: 3
                                    ty: I32
                              ty: I32
                      ty: I32
              ty: I32
      ty: I32
    static_data: []
signatures:
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 477
      name: 246
imports: []
memories: []
aggregates: []
static_entries: []
start_function: ~
