crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__generic_impl_slice_count_method_lowers_correctly.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 109
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
        locals_debug: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 114
                    ty:
                      Function:
                        signature_index: 0
                    span:
                      start: 195
                      end: 204
                  arguments:
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 0
                      ty:
                        Aggregate:
                          aggregate_index: 0
                      span:
                        start: 195
                        end: 196
              ty: U32
              span:
                start: 195
                end: 204
      ty: U32
      span:
        start: 189
        end: 206
    static_data: []
    file_id: 1
    name: ~
  - id: 114
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
        locals_debug: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                AggregateGet:
                  scope_index: 0
                  local_index: 0
                  value_index: 1
              ty: U32
              span:
                start: 127
                end: 142
      ty: U32
      span:
        start: 117
        end: 148
    static_data: []
    file_id: 1
    name: ~
signatures:
  - items:
      - Aggregate:
          aggregate_index: 0
      - U32
    params_count: 1
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 109
      name: 119
imports: []
memories:
  - id: 106
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates:
  - values:
      - Pointer:
          memory: 106
          kind: Memory32
      - U32
    offsets:
      - 0
      - 4
    layout:
      size: 8
      align: 4
    decl_to_phys:
      - 0
      - 1
static_entries: []
start_function: ~
